--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -143,7 +143,7 @@ body.taxa {
                 }
                 .lookalikes {
                     dt {
-                        margin-top: 1em;
+                        margin: 8px 0 2px;
                         display: block;
                     }
                     dd {
