Fix bug where species-page plus icon didn't switch to a minus icon.

--- a/gobotany/taxa/templates/gobotany/_species_main_content.html
+++ b/gobotany/taxa/templates/gobotany/_species_main_content.html
@@ -156,8 +156,7 @@
                       pile.</p>
                 {% endif %}
             </div>
-            <a class="description-control" href="#" 
-                style="background-image: url(/static/images/icons/plus.png)">Show 
+            <a class="description-control" href="#">Show 
                 All Characteristics</a>
             <ul class="full-description">
                 {% for character_group in all_characteristics %}
