Added missing staff, fixed typo

--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -25,17 +25,25 @@
     <h2>Botanical Data Management</h2>
 		
     <ul>
+		<li>Dorothy Allard</li>
+		<li>Josh Atwood</li>
+		<li>Bill Brumback</li>
+		<li>Brian DeGasperis</li>
         <li>Elizabeth Farnsworth</li>
         <li>Marybeth Hanley</li>
+		<li>Sara Klionsky</li>
         <li>Sid Koul</li>
         <li>William Moorhead</li>
 		<li>Dan Scharfman</li>
-        <li>Tristrum Seidler</li>
+        <li>Tristram Seidler</li>
+		<li>Sally Shaw</li>
+		<li>Tom Vining</li>
     </ul>
 
     <h2>Image Management</h2>
 		
     <ul>
+		<li>Bruce Patterson</li>
         <li>Arieh Tal</li>
         <li>Tom Warhol</li>
         <li>Jill Weber</li>
@@ -46,6 +54,7 @@
     <ul>
         <li>Matt Belge</li>
         <li>Rocky Burt</li>
+		<li>Jinyoung Chang</li>
         <li>Emily Dunkle</li>
         <li>John Galada</li>
         <li>Sally Kleinfeldt</li>
@@ -72,7 +81,6 @@
 		<li>Don Hudson, Chewonki Foundation</li>
 		<li>Bob Raiselis, Montshire Museum of Science</li>
 		<li>James Sirch, Yale Peabody Museum of Natural History</li>
-		<li>Dennis Whigham, North American Orchid Conservation Center</li>
 	</ul>
 
 {% endblock %}
