Upgrade CSS reset to fix some CSS validation errors.

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -453,6 +453,7 @@ header {
         }
         li {
             line-height: 150%;
+            list-style-type: none;
             margin: 0 0 4px 0;
             padding: 0 15px 16px;
         }
