--- a/gobotany/static/sass/_help.scss
+++ b/gobotany/static/sass/_help.scss
@@ -305,6 +305,7 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
                 border-top: 0;
             }
             a {
+                border-bottom: 0;
                 float: left;
                 margin-left: -34px;
             }
